Fixed some styling issues implemented flex wrap added handler to get previous and next page funcionality added buttons and style to them

--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -8,3 +8,7 @@
 }
 
 /* write your parent styles in here for your App.js */
+.inactive {
+  background-color: gray;
+  cursor: not-allowed;
+}
